maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:42: error: ';' expected but 'else' found.
	else if (!estFaceMur){
        ^Escaper:79: error: Unmatched closing brace '}' ignored here
}
^